tools/tests/errors/super_no_base.experr
does not inherit from any class
